bluec-tests/tests/invalid/stmt_loops/for_multiple_decls_2.c
int main(void) {
    for (int i = 0, float f = 1.0f; i < 10; ++i) {

    }
    return 0;
}
